Incorrect geometry with boolean operator #53999

Closed
opened 2018-02-05 14:33:11 +01:00 by Paul Melis · 12 comments

System Information

Arch Linux, GTX Titan

Blender Version

2.79a release candidate from blender.org

Short description of error

I have an object from which I subtract a cylinder, using a boolean difference modifier. Some of the edges of the resulting mesh are incorrect. The base object was also produced with a boolean difference, so maybe there is something wrong at that level already.

Exact steps for others to reproduce the error

See attached .blend. The result of t hole in the hemispherical object is not round. There's 4 edges that

**System Information** Arch Linux, GTX Titan **Blender Version** 2.79a release candidate from blender.org **Short description of error** I have an object from which I subtract a cylinder, using a boolean difference modifier. Some of the edges of the resulting mesh are incorrect. The base object was also produced with a boolean difference, so maybe there is something wrong at that level already. **Exact steps for others to reproduce the error** See attached .blend. The result of t hole in the hemispherical object is not round. There's 4 edges that
Author

Added subscriber: @PaulMelis

Added subscriber: @PaulMelis

#54181 was marked as duplicate of this issue

#54181 was marked as duplicate of this issue
Author

(Ahum, submitted too soon :))

See the screenshot. There are four of these strange edges. The selected face actually seems to be drawn incorrectly with respect to its actual edges.

boolean_bug.blend ss.png

(Ahum, submitted too soon :)) See the screenshot. There are four of these strange edges. The selected face actually seems to be drawn incorrectly with respect to its actual edges. [boolean_bug.blend](https://archive.blender.org/developer/F2130854/boolean_bug.blend) ![ss.png](https://archive.blender.org/developer/F2130863/ss.png)

Added subscriber: @zeauro

Added subscriber: @zeauro

There are worst bugs already listed about overlapping geometry.
I am not sure if this case of a shell should be considered as a duplicate or a different case.

Anyways, it is just a wrong choîce to triangulate an Ngon. User can easily fix this by adding a triangulate modifier after Boolean modifier or on Cylinder operand.

There are worst bugs already listed about overlapping geometry. I am not sure if this case of a shell should be considered as a duplicate or a different case. Anyways, it is just a wrong choîce to triangulate an Ngon. User can easily fix this by adding a triangulate modifier after Boolean modifier or on Cylinder operand.

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2018-02-07 15:53:04 +01:00

Apparently, happens with both Carve and BMesh boolean implementations. @campbellabrton, are you up for looking into this issue? :)

Apparently, happens with both Carve and BMesh boolean implementations. @campbellabrton, are you up for looking into this issue? :)

Added subscriber: @mont29

Added subscriber: @mont29

This is not really related to booleans, it's more that quads always tessellate first to third vertices.
This has been reported before and we've closed as known-limitation/behavior.

This was because we used to use GL_QUAD (in 2.8x this is no longer the case), so the order of tessellation wasn't defined,
In fact on some ATI cards this would show correctly.

Since 2.8x defines tessellation, it's probably best we support concave quads (as we do concave ngons).

Submitted D3052 to support this, would like to get feedback from @mont29 since this has implications elsewhere (exporters for eg).

This is not really related to booleans, it's more that quads always tessellate first to third vertices. This has been reported before and we've closed as known-limitation/behavior. This was because we used to use `GL_QUAD` *(in 2.8x this is no longer the case)*, so the order of tessellation wasn't defined, In fact on some ATI cards this would show correctly. Since 2.8x defines tessellation, it's probably best we support concave quads (as we do concave ngons). Submitted [D3052](https://archive.blender.org/developer/D3052) to support this, would like to get feedback from @mont29 since this has implications elsewhere (exporters for eg).

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Fixed f088c6b9f6

Although this won't be for 2.79a since we need to see it doesn't cause issues for animators.

Fixed f088c6b9f6 Although this won't be for 2.79a since we need to see it doesn't cause issues for animators.

Added subscriber: @Hillda

Added subscriber: @Hillda
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53999
No description provided.